# bias-ext-discussions

./: extension.json  pyproject.toml
bias_ext_discussions/: __init__.py
bias_ext_discussions/backend/: admin.py  admin_surface.py  apps.py  constants.py  content_posts.py  discussion_tracking.py  events.py  ext.py  extenders.py  forum_contracts.py  frontend.py  handlers.py  listener_contracts.py  listeners.py  model_contracts.py  models.py  realtime.py  registry.py  resources.py  runtime.py  schemas.py  search_contracts.py  search_targets.py  service_lifecycle.py  services.py  settings.py  tasks.py  tests.py  timeline.py  visibility.py
bias_ext_discussions/backend/django_migrations/: 0001_initial.py  0002_initial.py  0003_discussion_approval_status.py  0004_remove_discussion_discussions_user_id_4b0eee_idx_and_more.py  0005_drop_content_model_state.py
bias_ext_discussions/backend/management/commands/: flush_discussion_view_counts.py
frontend/admin/: index.js
frontend/forum/: DiscussionComposer.vue  DiscussionCreateView.vue  DiscussionDetailView.vue  DiscussionListView.vue  discussionDetailActionHandlers.js  discussionDetailActionHandlers.test.js  discussionFrontendRegistry.js  discussionHeroStyle.js  discussionList.js  discussionList.test.js  discussionListNavigation.js  discussionListNavigation.test.js  discussionListRealtimeUi.js  discussionPostStream.js  discussionPostStream.test.js  discussionRuntime.js  discussionTypingState.js  discussionTypingState.test.js  index.js  nodeSdk.js  sdk.d.ts  sdk.js  startDiscussionRuntime.js  useDiscussionCreatePage.js  useDiscussionCreateViewBindings.js  useDiscussionCreateViewBindings.test.js  useDiscussionCreateViewModel.js  useDiscussionDetailInteractions.js  useDiscussionDetailMenus.js  useDiscussionDetailMetaState.js  useDiscussionDetailModerationActions.js  useDiscussionDetailPage.js  useDiscussionDetailPageLifecycle.js  useDiscussionDetailPageLifecycle.test.js  useDiscussionDetailPermissionState.js  useDiscussionDetailPermissionState.test.js  useDiscussionDetailPostModerationActions.js  useDiscussionDetailPresentation.js  useDiscussionDetailPresentationState.js  useDiscussionDetailState.js  (+48 more)
frontend/forum/components/: DiscussionEventPostBase.vue  DiscussionGenericEventPostItem.vue  DiscussionHero.vue  DiscussionHiddenPostItem.vue  DiscussionListContent.vue  DiscussionListHeaderSection.vue  DiscussionListHero.vue  DiscussionListItem.vue  DiscussionListItemMeta.vue  DiscussionListSidebar.vue  DiscussionListSidebarStartButton.vue  DiscussionListToolbar.vue  DiscussionLockedPostItem.vue  DiscussionMobileActions.vue  DiscussionPostItem.vue  DiscussionRenamedPostItem.vue  DiscussionReplyState.vue  DiscussionSidebar.vue  DiscussionSidebarActions.vue  DiscussionSidebarScrubber.vue  DiscussionStickyPostItem.vue  PostHiddenPostItem.vue
tests/: test_runtime_facade_imports.py
