[project]
name = "bias-ext-discussions"
version = "0.1.0"
description = "Bias Discussions Extension"
requires-python = ">=3.11"
dependencies = ["bias-core>=0.1,<0.2"]

[project.entry-points."bias.extensions"]
discussions = "bias_ext_discussions.backend.ext:extend"

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-django>=4.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_discussions*"]

[tool.setuptools.data-files]
"bias_extensions/discussions" = ["extension.json"]
"bias_extensions/discussions/frontend/admin" = ["frontend/admin/index.js"]
"bias_extensions/discussions/frontend/forum" = [
  "frontend/forum/DiscussionComposer.vue",
  "frontend/forum/DiscussionCreateView.vue",
  "frontend/forum/DiscussionDetailView.vue",
  "frontend/forum/DiscussionListView.vue",
  "frontend/forum/discussionDetailActionHandlers.js",
  "frontend/forum/discussionDetailActionHandlers.test.js",
  "frontend/forum/discussionDetailMeta.js",
  "frontend/forum/discussionDetailMeta.test.js",
  "frontend/forum/discussionDetailPendingMap.js",
  "frontend/forum/discussionDetailPendingMap.test.js",
  "frontend/forum/discussionFrontendRegistry.js",
  "frontend/forum/discussionHeroStyle.js",
  "frontend/forum/discussionList.js",
  "frontend/forum/discussionList.test.js",
  "frontend/forum/discussionListLoadState.shared.js",
  "frontend/forum/discussionListNavigation.js",
  "frontend/forum/discussionListNavigation.test.js",
  "frontend/forum/discussionListRealtime.js",
  "frontend/forum/discussionListRealtime.test.js",
  "frontend/forum/discussionListRealtimeUi.js",
  "frontend/forum/discussionPostStream.js",
  "frontend/forum/discussionPostStream.test.js",
  "frontend/forum/discussionRuntime.js",
  "frontend/forum/discussionTypingState.js",
  "frontend/forum/discussionTypingState.test.js",
  "frontend/forum/index.js",
  "frontend/forum/nodeSdk.js",
  "frontend/forum/sdk.d.ts",
  "frontend/forum/sdk.js",
  "frontend/forum/startDiscussionRuntime.js",
  "frontend/forum/useDiscussionCreatePage.js",
  "frontend/forum/useDiscussionCreateViewBindings.js",
  "frontend/forum/useDiscussionCreateViewBindings.test.js",
  "frontend/forum/useDiscussionCreateViewModel.js",
  "frontend/forum/useDiscussionDetailInteractions.js",
  "frontend/forum/useDiscussionDetailMenus.js",
  "frontend/forum/useDiscussionDetailMetaState.js",
  "frontend/forum/useDiscussionDetailModerationActions.js",
  "frontend/forum/useDiscussionDetailPage.js",
  "frontend/forum/useDiscussionDetailPageLifecycle.js",
  "frontend/forum/useDiscussionDetailPageLifecycle.test.js",
  "frontend/forum/useDiscussionDetailPermissionState.js",
  "frontend/forum/useDiscussionDetailPermissionState.test.js",
  "frontend/forum/useDiscussionDetailPostModerationActions.js",
  "frontend/forum/useDiscussionDetailPresentation.js",
  "frontend/forum/useDiscussionDetailPresentationState.js",
  "frontend/forum/useDiscussionDetailState.js",
  "frontend/forum/useDiscussionDetailUiState.js",
  "frontend/forum/useDiscussionDetailUiState.test.js",
  "frontend/forum/useDiscussionDetailUserActions.js",
  "frontend/forum/useDiscussionDetailViewBindings.js",
  "frontend/forum/useDiscussionDetailViewBindings.test.js",
  "frontend/forum/useDiscussionDetailViewModel.js",
  "frontend/forum/useDiscussionDetailViewModel.test.js",
  "frontend/forum/useDiscussionHeroState.js",
  "frontend/forum/useDiscussionHeroState.test.js",
  "frontend/forum/useDiscussionListContentState.js",
  "frontend/forum/useDiscussionListContentState.test.js",
  "frontend/forum/useDiscussionListData.js",
  "frontend/forum/useDiscussionListHeroState.js",
  "frontend/forum/useDiscussionListHeroState.test.js",
  "frontend/forum/useDiscussionListItemMetaState.js",
  "frontend/forum/useDiscussionListItemMetaState.test.js",
  "frontend/forum/useDiscussionListItemState.js",
  "frontend/forum/useDiscussionListItemState.test.js",
  "frontend/forum/useDiscussionListLoadState.js",
  "frontend/forum/useDiscussionListLoadState.test.js",
  "frontend/forum/useDiscussionListMetaState.js",
  "frontend/forum/useDiscussionListMetaState.test.js",
  "frontend/forum/useDiscussionListNavigation.js",
  "frontend/forum/useDiscussionListNavigation.test.js",
  "frontend/forum/useDiscussionListPage.js",
  "frontend/forum/useDiscussionListPageActions.js",
  "frontend/forum/useDiscussionListPageActions.test.js",
  "frontend/forum/useDiscussionListPageLifecycle.js",
  "frontend/forum/useDiscussionListPageLifecycle.test.js",
  "frontend/forum/useDiscussionListPageState.js",
  "frontend/forum/useDiscussionListRealtimeLifecycleState.js",
  "frontend/forum/useDiscussionListRealtimeLifecycleState.test.js",
  "frontend/forum/useDiscussionListRealtimeState.js",
  "frontend/forum/useDiscussionListRealtimeState.test.js",
  "frontend/forum/useDiscussionListResourceState.js",
  "frontend/forum/useDiscussionListResourceState.test.js",
  "frontend/forum/useDiscussionListRouteActions.js",
  "frontend/forum/useDiscussionListRouteActions.test.js",
  "frontend/forum/useDiscussionListRouteState.js",
  "frontend/forum/useDiscussionListSidebarStartButtonState.js",
  "frontend/forum/useDiscussionListSidebarStartButtonState.test.js",
  "frontend/forum/useDiscussionListSidebarState.js",
  "frontend/forum/useDiscussionListSidebarState.test.js",
  "frontend/forum/useDiscussionListToolbarState.js",
  "frontend/forum/useDiscussionListToolbarState.test.js",
  "frontend/forum/useDiscussionListViewBindings.js",
  "frontend/forum/useDiscussionListViewBindings.test.js",
  "frontend/forum/useDiscussionListViewModel.js",
  "frontend/forum/useDiscussionNearRouteState.js",
  "frontend/forum/useDiscussionNearRouteState.test.js",
  "frontend/forum/useDiscussionPostStreamState.js",
  "frontend/forum/useDiscussionPostViewportState.js",
  "frontend/forum/useDiscussionPostViewportState.test.js",
  "frontend/forum/useDiscussionSidebarScrubber.js",
  "frontend/forum/useDiscussionSidebarScrubber.test.js",
]
"bias_extensions/discussions/frontend/forum/components" = [
  "frontend/forum/components/DiscussionEventPostBase.vue",
  "frontend/forum/components/DiscussionGenericEventPostItem.vue",
  "frontend/forum/components/DiscussionHero.vue",
  "frontend/forum/components/DiscussionHiddenPostItem.vue",
  "frontend/forum/components/DiscussionListContent.vue",
  "frontend/forum/components/DiscussionListHeaderSection.vue",
  "frontend/forum/components/DiscussionListHero.vue",
  "frontend/forum/components/DiscussionListItem.vue",
  "frontend/forum/components/DiscussionListItemAvatar.vue",
  "frontend/forum/components/DiscussionListItemMeta.vue",
  "frontend/forum/components/DiscussionListItemStats.vue",
  "frontend/forum/components/DiscussionListSidebar.vue",
  "frontend/forum/components/DiscussionListSidebarNavLink.vue",
  "frontend/forum/components/DiscussionListSidebarStartButton.vue",
  "frontend/forum/components/DiscussionListToolbar.vue",
  "frontend/forum/components/DiscussionLockedPostItem.vue",
  "frontend/forum/components/DiscussionMobileActions.vue",
  "frontend/forum/components/DiscussionPostItem.vue",
  "frontend/forum/components/DiscussionRenamedPostItem.vue",
  "frontend/forum/components/DiscussionReplyState.vue",
  "frontend/forum/components/DiscussionSidebar.vue",
  "frontend/forum/components/DiscussionSidebarActions.vue",
  "frontend/forum/components/DiscussionSidebarScrubber.vue",
  "frontend/forum/components/DiscussionStickyPostItem.vue",
  "frontend/forum/components/PostHiddenPostItem.vue",
]
